src/components/styles.css
body{
    background:#fff;
}
*{
    box-sizing:border-box;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
}

.posts-container{
    width:100%;
    display:flex;
    flex-direction:column;
}
.post{
    width:100%;
    min-height:40px;
    color:#212121;
    background-color:#ffeaa7;
}
.date{
    color:#212121;
    font-size:.6em;
    display: inline;
}
.voting{
    display:inline-flex;
    justify-content: center;
    flex-direction: column;
}

.noselect {
    -webkit-touch-callout: none; /* iOS Safari */
      -webkit-user-select: none; /* Safari */
       -khtml-user-select: none; /* Konqueror HTML */
         -moz-user-select: none; /* Firefox */
          -ms-user-select: none; /* Internet Explorer/Edge */
              user-select: none; /* Non-prefixed version, currently
                                    supported by Chrome and Opera */
  }

.vote{
    display: inline;
    font-size:.8em;
    cursor:pointer;
    margin:2px;
}
.votes{
    display:inline;
    font-size:.6em;
    margin:2px;
}

.post-number{
    display: inline;
    color: #323232;
}

.backlink{
    font-size:.65em;
    font-style:italic;
    margin:2px;
    color:#323232;
}
.Fab{
    background:#ff6600;
    text-align:center;
    padding:8px;
}
.overlay{
    position:absolute;
    left:0;
    top:0;
    width:100%;
    height:100%;
    display:flex;
    justify-content: center;
    align-items: center;
    z-index:1;
}
.hiddenOverlay{
    display:none;
}
.bg{
    width:100%;
    height:100%;
    position:absolute;
    top:0;
    left:0;
    z-index:-1;
    background:rgba(0,0,0,.75);
}

.modal{
    background:white;
    padding:8px;
    border-radius:3px;
}

.linkLabel{
    width:100%;
    display: block;
}

.titleLabel{
    width:100%;
    display:block;
}

a{
    color:inherit;
    text-decoration:none;
}

.title-bar{
    background-color:#ff6600;
    padding:4px;
    font-weight:bold;

}

